--- a/banking-service/Dockerfile
+++ b/banking-service/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /src
 ENV GO111MODULE=on
 COPY . .
 RUN go mod download
-RUN go build -o api ./main.go
+RUN go build -o api ./application.go
 EXPOSE 5001
 ENTRYPOINT ./api
